# card-counter

./: .gitignore  Cargo.toml  README.org  burndown.gp  lambda.json  readme.org  run-lambda.sh  samconfig.toml
.github/workflows/: build.yml  release.yml
card-counter/cli/: Cargo.toml
card-counter/cli/scripts/: test_azure.sh  test_jira.sh
card-counter/cli/src/: errors.rs  lib.rs
card-counter/cli/src/commands/: burndown.rs  mod.rs
card-counter/cli/src/database/: aws.rs  azure.rs  config.rs  json.rs  mod.rs
card-counter/cli/src/kanban/: jira.rs  mod.rs  trello.rs
card-counter/lambda/: .gitignore  Cargo.toml  deploy-lambda.sh  env.json  query.json  readme.org  run-lambda.sh  template.yaml
card-counter/lambda/src/: burndown_helpers.rs  burndown_lambda.rs  slack_helpers.rs
card-counter/lambda/terraform/: .gitignore  burndown-2021-09-01_2021-10-01.svg:Zone.Identifier  index.html  main.js  main.tf  policy.json  terraform.tfstate
src/: errors.rs  lib.rs  main.rs  score.rs  trello.rs
src/commands/: burndown.rs  mod.rs
src/database/: aws.rs  azure.rs  config.rs  file.rs  json.rs  mod.rs
src/history/: file.rs
src/kanban/: jira.rs  mod.rs  trello.rs
src/score/: mod.rs
src/trello/: mod.rs
src/util/: mod.rs
