[package]
name = "card-counter"
version = "1.0.0-alpha-1"
authors = ["Justin Barclay <justincbarclay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
reqwest = { version = "0.10.7", features = ["json"] }
hyper-tls = "0.4.3"
hyper = "0.13.5"
serde = { version = "1.0.106", features = ["derive"] }
tokio = { version = "0.2.16", features = ["macros"] }
serde_json = "1.0.51"
serde_yaml = "0.8.11"
regex = "1.3.6"
clap = "2.33.0"
dialoguer = "0.6.2"
dirs = "2.0"
prettytable-rs = "0.8"
error-chain = "0.12.4"

async-trait = "0.1.29"
rusoto_core = "0.45.0"
rusoto_dynamodb = "0.45.0"
serde_dynamodb = "0.6.0"
