[package]
name = "card-counter"
version = "1.0.0-alpha-2"
authors = ["Justin Barclay <justincbarclay@gmail.com>"]
edition = "2018"

[[bin]]
name = "card-counter"
path = "src/bin/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Base dependencies
chrono = "0.4.11"
regex = "1.3.6"
dirs = "2.0"
error-chain = "0.12.4"

# Asynchronous Networking
tokio = { version = "1.3.0", features = ["macros"] }
async-trait = "0.1.29"
reqwest = { version = "0.11.0", features = ["json"] }
hyper-tls = "0.4.3"
hyper = "0.14.4"

# TUI
clap = "2.33.0"
dialoguer = { git = "https://github.com/justinbarclay/dialoguer"}
prettytable-rs = "0.8"
pointplots = {git = "https://github.com/justinbarclay/pointplots-rs.git", rev = "a756107"}

# Serializers/Deserializers
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
serde_yaml = "0.8.11"
serde_dynamodb = "0.7.0"

# AWS Interface
rusoto_core = "0.46.0"
rusoto_dynamodb = "0.46.0"

# Azure Interface
azure_cosmos = { package = "azure_cosmos", git = "https://github.com/justinbarclay/azure-sdk-for-rust", branch = "jb/fix-header-const"}
azure_core = { package = "azure_core", git = "https://github.com/justinbarclay/azure-sdk-for-rust", branch = "jb/fix-header-const"}
