[package]
name = "burndown-lambda"
version = "0.1.0"
authors = ["Justin Barclay <justincbarclay@gmail.com>"]
edition = "2018"

[[bin]]
name = "burndown-lambda"
path = "src/burndown_lambda.rs"

[dependencies]
card-counter = {path = "../cli", version = "1.0.0-alpha-4"}
# Lambda
lambda = {package = "lambda_runtime", version = "^0.4"}
log = "^0.4"
simple_logger = "^1"
openssl = {version = "^0.10", features = ["vendored"]}
rusoto_s3 = "0.46.0"
http = "0.2.5"
aws_lambda_events = "0.5.0"
serde_urlencoded = "0.7"